<resources>
    <string name="app_name">Touch Counter</string>
    <string name="info_hold_timing">Hold timing. ± 5 error</string>
    <string name="default_timing" translatable="false">0 ms</string>
    <string name="default_count" translatable="false">0</string>
    <string name="default_name">Counter #</string>
    <string name="counter_group">Counters</string>
    <string name="counter_list">Counters count</string>
    <string name="options_title">Options: %s</string>
    <string name="options_hint_name">Name</string>
    <string name="options_save">Save</string>
    <string name="options_negative">Cancel</string>
    <string name="options_delete">Delete</string>
    <string name="confirmation_delete_message">Deleted data cannot be recovered</string>

    <string name="action_settings">Settings</string>
    <string name="stats_counters_count">Counters:</string>
    <string name="stats_clicks_count">Clicks:</string>
    <string name="stats_long_click">Longest click (ms):</string>
    <string name="stats_short_click">Shortest click (ms):</string>
    <string name="stats_most_clicks">Max clicks:</string>

    <string name="stats_title">Statistics</string>
    <string name="confirmation_delete_title">Delete counter?</string>
    <string name="confirmation_clear_clicks_title">Clear all clicks?</string>
    <string name="nav_others">Others</string>
    <string name="nav_send_email_helper">Send email using</string>
    <string name="nav_send_email_subject" translatable="false">[Feedback] Touch Counter</string>
    <string name="nav_send_email">Send feedback</string>
    <string name="options_description">Options</string>
    <string name="millis" translatable="false">%d ms</string>
    <string name="seconds" translatable="false">%d s</string>
    <string name="click" translatable="false">Click</string>
    <string name="enable_dark_theme">Enable dark theme</string>
    <string name="use_seconds">Use seconds</string>
    <string name="enable_vibrations">Enable Vibrations</string>

    <string name="selected_items_count" formatted="false">%d selected</string>
    <string name="menu_delete_selected">Delete Selected</string>
    <string name="menu_wipe_selected">Wipe Clicks</string>

    <string name="confirmation_delete_selected_title">Delete Selected Items?</string>
    <string name="confirmation_delete_selected_message" formatted="false">Are you sure you want to delete %d counters? This action cannot be undone.</string>
    <string name="confirmation_action_positive_delete">Delete</string>

    <string name="confirmation_wipe_selected_title">Wipe Clicks for Selected?</string>
    <string name="confirmation_wipe_selected_message" formatted="false">Are you sure you want to wipe all clicks for %d selected counters?</string>
    <string name="confirmation_action_positive_wipe">Wipe</string>

    <string name="min_click_empty" translatable="false">Min: - (-)</string>
    <string name="min_click" translatable="false">Min: %s (%d)</string>
    <string name="max_click" translatable="false">Max: %s (%d)</string>
    <string name="max_click_empty" translatable="false">Max: - (-)</string>
</resources>
